# src/main/java/com/rubymusic/auth/model/enums/BlockReason.java
@@ -1,0 +1,9 @@
+package com.rubymusic.auth.model.enums;
+
+public enum BlockReason {
+    HARASSMENT_OR_BULLYING,
+    INCITEMENT_TO_VIOLENCE,
+    RACISM_OR_DISCRIMINATION,
+    INAPPROPRIATE_CONTENT,
+    SPAM_OR_ADVERTISING
+}
