# src/main/java/com/rubymusic/auth/model/enums/UserRole.java
@@ -1,0 +1,6 @@
+package com.rubymusic.auth.model.enums;
+
+public enum UserRole {
+    USER,
+    ADMIN
+}
