# src/main/java/com/rubymusic/auth/model/enums/UserStatus.java
@@ -1,0 +1,7 @@
+package com.rubymusic.auth.model.enums;
+
+public enum UserStatus {
+    ACTIVE,
+    INACTIVE,
+    BLOCKED
+}
